使用线程池遍历一个list数组

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #线程池维护线程的最少数量
-spring.task.execution.pool.core-size=30
+spring.task.execution.pool.core-size=20
 #线程池维护线程的最大数量
-spring.task.execution.pool.max-size=50
+spring.task.execution.pool.max-size=1000
 #允许的空闲时间
-spring.task.execution.pool.keep-alive=200
+spring.task.execution.pool.keep-alive=200s
 #缓存队列
-spring.task.execution.pool.queue-capacity=50
+spring.task.execution.pool.queue-capacity=10
+
