--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     username: root
-    password: Ire7758521
+    password: qwe
     url: jdbc:mysql://localhost:3306/booksmate?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
